--- a/My_Second_Markdown.Rmd
+++ b/My_Second_Markdown.Rmd
@@ -8,5 +8,10 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
-This is my second markdown file.
+Download sleep study data
+```{r}
+library(readr)
+sleep <- read_csv(
+  "https://vincentarelbundock.github.io/Rdatasets/csv/lme4/sleepstudy.csv")
+head(sleep)
+```
