--- a/My_Second_Markdown.Rmd
+++ b/My_Second_Markdown.Rmd
@@ -15,3 +15,13 @@ sleep <- read_csv(
   "https://vincentarelbundock.github.io/Rdatasets/csv/lme4/sleepstudy.csv")
 head(sleep)
 ```
+Plot the data by subject
+```{r}
+library(ggplot2)
+ggplot(sleep, aes(x=Days, y=Reaction)) +
+  geom_point()+
+  geom_smooth()+
+  scale_x_continuous(breaks = seq(0,8,by = 2))+
+  facet_wrap(~Subject)
+
+```
